fixed alignment (view recipe)

--- a/sample/styles/globals.css
+++ b/sample/styles/globals.css
@@ -624,10 +624,9 @@ a {
   display: block;
   flex: 0 0 auto;
   align-self: flex-end;
-  width: 133px;
   min-width: 133px;
-  height: 38px;
-  margin-top: -2px;
+  height: 50px;
+  margin-top: -10px;
   font: var(--font-weight-500) var(--font-size-14) Poppins;
   color: var(--color-darkslategrey-14624d51);
   text-transform: uppercase;
